adding check box

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <input type="email" name="email" placeholder="Enter Your mail">
 <input type="text" name="school" placeholder="Your School">
 <input type="password" name="password" placeholder="Your Password">
+<button type="checkbox"> Check out </button>
 <button type="submit">Submit</button>
 
         
